--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,6 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^3.5.1",
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/fonts": "^0.11.2",
     "@nuxt/icon": "^1.12.0",
@@ -26,6 +25,7 @@
   },
   "devDependencies": {
     "@vite-pwa/nuxt": "^1.0.1",
+    "nuxt-simple-sitemap": "^4.4.1",
     "workbox-precaching": "^7.3.0"
   }
 }
